# Avalon-Atlas

./: .gitignore  AvalonAtlas.spec  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIXES.md  LICENSE  README.en.md  README.md  SECURITY.md  build.py  config.json  index.html  main.py  package-lock.json  package.json  pyproject.toml  region-selector.html  requirements.txt  tsconfig.node.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  ocr_issue.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
atlas/: __init__.py  config.py  logger.py  version.py
atlas/data/: models.py  repository.py
atlas/maps/: __init__.py  model.py
atlas/services/: fuzzy_match.py  hotkey_service.py  ocr_service.py  search_service.py  update_checker.py
atlas/ui/: __init__.py  main_window.py  region_selector.py  resource_loader.py  settings_dialog.py  widgets.py
docs/: ARCHITECTURE.md  CHAT_OCR_GUIDE.md  GITHUB_PAGE_CHECKLIST.md  GitHub_Actions使用说明.md  OCR.md  README.md  RELEASE.md  Tauri重构设计方案.md  UI优化更新说明.md  fix_image_loading_issue.md  产品化与打包发布规范.md  发布检查清单.md  发布流程图示.md
docs/plan/: 01_overview.md  02_module_design.md  03_ui_interaction.md  04_search_algorithm.md
maps/: maps.json  maps.py
scripts/: cleanup.bat  package-portable.ps1  package-portable.sh  release.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src-tauri/src/commands/: config.rs  hotkey_ocr.rs  log_image.rs  mod.rs  ocr.rs  search.rs
src-tauri/src/models/: config.rs  map.rs  mod.rs
src-tauri/src/services/: hotkey_service.rs  mod.rs  ocr_service.rs  search_engine.rs
src-tauri/src/utils/: capture.rs  frozen_screen.rs  fuzzy.rs  logger.rs  mod.rs
src/components/: MapListItem.svelte  RegionSelector.svelte  SearchBox.svelte  Settings.svelte
src/components/map/: MapListItem.svelte
src/components/overlay/: RegionSelector.svelte
src/components/search/: SearchBox.svelte
src/components/settings/: Settings.svelte
src/lib/: i18n.ts  types.ts
tools/: check_qt_plugins.py  generate_maps_json.py  run_ocr_debug.py
