[project]
name = "atlas"
version = "1.0.0"
description = "阿瓦隆地图查询桌面工具 - 支持智能搜索与 OCR 识别"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Avalon Atlas Contributors"}
]
keywords = ["albion", "avalon", "map", "ocr", "search"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pydantic>=2.12.4",
    "pyside6>=6.7.0",
    "rapidfuzz>=3.9.0",
    "pillow>=10.3.0",
    "pytesseract>=0.3.10",
    "mss>=9.0.1",
    "keyboard>=0.13.5",
    "pynput>=1.7.7",
    "numpy>=2.1.1",
    "rapidocr-onnxruntime>=1.3.19",
    "pyinstaller>=6.16.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.11.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas", "atlas.*", "maps"]
exclude = ["static*", "debug*", "dist*", "docs*", "tools*", "__pycache__*"]
