[package]
name = "avalon-atlas"
version = "2.0.0"
description = "Avalon Atlas Tauri App"
authors = ["Development Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-global-shortcut = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
screenshots = "0.8"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
